# krea-2

./: .gitignore  README.md  build_edit_manifest.py  build_eval_set.py  build_train_list.py  constants.py  dashboard.py  encoder.py  eval_t2i.py  fused_adamw.py  loading.py  lora.py  mmdit.py  precache_edit.py  precache_style.py  precache_t2i.py  pyproject.toml  quantize.py  sample.py  sample_edit.py  sampling.py  scheduler.py  slider_render.py  trackers.py  train_slider.py  train_t2i.py  train_t2i_full_joint_cached.py  train_t2i_lora_cached.py  training_config.py  training_utils.py
config/: local.example.yaml  precache_t2i.yaml  slider.yaml  t2i_full.yaml  t2i_lora.yaml
docs/: TRAINING.md  prompting.md  safety.md
