[project]
name = "krea-2-oss"
version = "0.1.0"
description = "Minimal inference code for the Krea 2 (K2) diffusion model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.0",
    "transformers==4.57.1",
    "safetensors>=0.4.0",
    "pillow>=10.0.0",
    "einops>=0.7.0",
    "diffusers>=0.35.0",
    "click>=8.4.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
